--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Controle de Vendas e Estoque de Automóveis</title>
+    <!-- Link correto do Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEJx3wNf9gA7fF0aZfW1M0wDq4eVYcBBdbk3S4a9Xq+U9ttQssbIuH85bW5af" crossorigin="anonymous">
     <style>
         body {
@@ -125,7 +126,9 @@
         </div>
     </div>
 
+    <!-- Adicionando o script correto do Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
+
