--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Controle de Vendas e Estoque de Automóveis</title>
-    <!-- Link do Bootstrap 5 para um design moderno -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEJx3wNf9gA7fF0aZfW1M0wDq4eVYcBBdbk3S4a9Xq+U9ttQssbIuH85bW5af" crossorigin="anonymous">
+    <!-- Link do Bootstrap 5 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
             padding: 30px 0;
@@ -34,19 +34,18 @@
         .btn-primary:hover {
             background-color: #00509e;
         }
+        .btn-remove {
+            background-color: #dc3545;
+            color: white;
+        }
+        .btn-remove:hover {
+            background-color: #c82333;
+        }
         .table th, .table td {
             vertical-align: middle;
         }
-        .sales-record, .vehicle-stock, .filter-group {
+        .table-container {
             margin-top: 30px;
-        }
-        .remove-sale-btn {
-            background-color: #dc3545;
-            border-color: #dc3545;
-            color: white;
-        }
-        .remove-sale-btn:hover {
-            background-color: #c82333;
         }
         .text-muted {
             color: #6c757d !important;
@@ -58,8 +57,8 @@
 <div class="container">
     <h1 class="text-center">Controle de Vendas e Estoque de Automóveis</h1>
 
-    <!-- Cadastro de Veículos -->
-    <div class="vehicle-stock">
+    <!-- Cadastro de Veículo -->
+    <div>
         <h3>Cadastrar Veículo</h3>
         <div class="row">
             <div class="col-md-4">
@@ -85,22 +84,22 @@
             </div>
             <div class="col-md-4">
                 <label for="vehicle-quantity" class="form-label">Quantidade em Estoque</label>
-                <input type="number" class="form-control" id="vehicle-quantity" min="0">
+                <input type="number" class="form-control" id="vehicle-quantity" min="1">
             </div>
             <div class="col-md-4">
                 <label for="vehicle-value" class="form-label">Valor (R$)</label>
-                <input type="number" class="form-control" id="vehicle-value" min="0">
+                <input type="number" class="form-control" id="vehicle-value" min="1">
             </div>
             <div class="col-md-4">
                 <label for="vehicle-fipe" class="form-label">Fipe (R$)</label>
-                <input type="number" class="form-control" id="vehicle-fipe" min="0">
+                <input type="number" class="form-control" id="vehicle-fipe" min="1">
             </div>
         </div>
         <button class="btn btn-primary mt-3" id="register-vehicle">Cadastrar Veículo</button>
     </div>
 
-    <!-- Histórico de Vendas -->
-    <div class="sales-record">
+    <!-- Cadastro de Venda -->
+    <div class="mt-5">
         <h3>Registrar Venda</h3>
         <div class="row">
             <div class="col-md-4">
@@ -124,14 +123,14 @@
         <button class="btn btn-primary mt-3" id="register-sale">Registrar Venda</button>
     </div>
 
-    <!-- Exibição do Lucro Mensal -->
-    <div class="mt-4">
+    <!-- Lucro Mensal -->
+    <div class="mt-5">
         <h3>Lucro Mensal</h3>
         <p>Total de Lucro: <span id="monthly-profit">R$ 0,00</span></p>
     </div>
 
-    <!-- Exibição de Estoque -->
-    <div class="mt-4">
+    <!-- Estoque de Veículos -->
+    <div class="table-container">
         <h3>Veículos em Estoque</h3>
         <table class="table table-striped">
             <thead>
@@ -139,18 +138,18 @@
                     <th>Modelo</th>
                     <th>Tipo</th>
                     <th>Quantidade</th>
-                    <th>Valor</th>
-                    <th>Fipe</th>
+                    <th>Valor (R$)</th>
+                    <th>Fipe (R$)</th>
                 </tr>
             </thead>
             <tbody id="vehicle-stock-list">
-                <!-- Lista de veículos disponíveis em estoque será preenchida aqui -->
+                <!-- Lista de veículos em estoque será preenchida aqui -->
             </tbody>
         </table>
     </div>
 
     <!-- Histórico de Vendas -->
-    <div class="sales-history">
+    <div class="table-container">
         <h3>Histórico de Vendas</h3>
         <table class="table table-bordered">
             <thead>
@@ -175,3 +174,4 @@
 
 </body>
 </html>
+
